Fixed results overflow issue and made other various small design edits

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -43,4 +43,5 @@ li {
   background-color: #A1C181;
   border-radius: 5px;
   list-style-type: none;
+  font-size: 20px;
 }
